--- a/index.html
+++ b/index.html
@@ -19,23 +19,20 @@
     <div class="container d-flex align-items-center h-100">
       <div class="row">
         <header class="text-center col-12">
-          <h1 class="text-uppercase"><strong>herryyy!!! check out my contacts!!</strong></h1>
+          <h1 class="text-uppercase"><strong>heeeyyy!!! check out my contacts!!</strong></h1>
         </header>
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
           <hr>
-          <a href="">
-            <button class="btn btn-primary btn-xl trans">Discord</button>
-            <img src="Discord.png" width="50px%" class="trans">
-          </a>
-          <a href="">
-            <button class="btn btn-primary btn-xl trans">YouTube</button>
-            <img src="Instagram.png" width="50px%" class="trans">
-          </a>
-          <a href="">
-            <button class="btn btn-primary btn-xl trans">FaceBook</button>
-            <img src="Facebook.png" width="50px%" class="trans">
-          </a>
+            <a href="https://www.youtube.com/channel/UC54TV4-vPBBCTWNgjNy3FRw">
+              <button class="btn btn-primary btn-xl trans"><img src="youtube.png" width="30px" class="trans">&nbsp&nbsp YouTube</button>
+            </a>
+            <a href="https://discord.gg/sC2YYVWNYX">
+              <button class="btn btn-primary btn-xl trans"><img src="Discord.png" width="30px" class="trans">&nbsp&nbsp Discord</button>
+            </a>
+            <a href="https://www.facebook.com/sardarmonohar71">
+              <button class="btn btn-primary btn-xl trans"><img src="Facebook.png" width="30px" class="trans">&nbsp&nbsp FaceBook</button>
+            </a>
         </section>
       </div>
     </div>
