--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="icon" href="favicon.png" type="image/png" sizes="16x16">
     <title>DARK KNIGHTS Contact</title>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,16 +26,39 @@
         <section class="text-center col-12">
           <hr>
             <a href="https://www.youtube.com/channel/UC54TV4-vPBBCTWNgjNy3FRw">
-              <button class="btn btn-primary btn-xl trans"><img src="youtube.png" width="30px" class="trans">&nbsp&nbsp YouTube</button>
+              <button class="btn btn-primary btn-xl trans"><img src="youtube.png" height="20px" class="trans">&nbsp&nbsp YouTube</button>
             </a>
             <a href="https://discord.gg/sC2YYVWNYX">
-              <button class="btn btn-primary btn-xl trans"><img src="Discord.png" width="30px" class="trans">&nbsp&nbsp Discord</button>
+              <button class="btn btn-primary btn-xl trans"><img src="Discord.png" height="20px" width="20px" class="trans">&nbsp&nbsp Discord</button>
             </a>
             <a href="https://www.facebook.com/sardarmonohar71">
-              <button class="btn btn-primary btn-xl trans"><img src="Facebook.png" width="30px" class="trans">&nbsp&nbsp FaceBook</button>
+              <button class="btn btn-primary btn-xl trans"><img src="Facebook.png" height="20px" class="trans">&nbsp&nbsp FaceBook</button>
             </a>
         </section>
       </div>
+    </div>
+    <div class="bounce">
+      <div class="buffer"></div>
+      <center>
+        <strong>
+          <a href="#aboutme">
+            About Me
+          </a>
+        </strong>
+        <br>
+        <img src="https://i.pinimg.com/originals/b0/88/54/b08854e2b29c5ee86876790884b406a9.gif" height="30px" class="rotate">
+      </center>
+    </div>
+    <div>
+      <br><br><br>
+      <img src="me.png" class="me d-flex">
+      <span>
+        <b>Hey</b> folkes, Myself Samik Sardar aka SAM. I am 17 years old and I am from malda, west bengal. 
+        I always had this different kind of adrenaline rush in everything. I do drawing , photoshop 
+        edits and side by side gaming. I started gaming when I was in 7th standard and till now the 
+        joy of winning , clutching round or just completing mission, quests stays the same. So I find gaming to be happy and challenging place. My main aim is to expand this gaming community even more further. There should be no one saying that gaming is a bad place and stuffs like slangs or toxic people should exist. So Join the DARK KNIGHTS gaming and lets us make this community the cleanest community anyone had ever seen. Stay tunned for upcoming info.
+        <article id="aboutme"><br><br><br></article>
+      </span>
     </div>
   </body>
 </html>
